[gd_scene load_steps=17 format=3 uid="uid://blnwws40ddesf"]

[ext_resource type="Script" uid="uid://duirbrtiw270w" path="res://src/UI/Selector.gd" id="1_co0ct"]
[ext_resource type="Theme" uid="uid://3w4qd4ooj08t" path="res://assets/Theme/baseTheme.tres" id="2_3pers"]
[ext_resource type="PackedScene" uid="uid://dc5hpvlj8furc" path="res://scenes/UI/Login.tscn" id="3_to38n"]
[ext_resource type="PackedScene" uid="uid://bi8rfuogagio7" path="res://scenes/UI/Settings.tscn" id="4_5u3vk"]
[ext_resource type="PackedScene" uid="uid://c4esmjnf630vc" path="res://scenes/3DBoard.tscn" id="4_l2ddi"]
[ext_resource type="PackedScene" uid="uid://mxvbujo17lyt" path="res://scenes/2DBoard.tscn" id="5_b70kj"]
[ext_resource type="PackedScene" uid="uid://bb4r4jnwbkny1" path="res://scenes/UI/NewGame.tscn" id="7_8semy"]
[ext_resource type="Script" uid="uid://csps8qncgfq13" path="res://src/UI/boardPort.gd" id="8_c5sep"]
[ext_resource type="PackedScene" uid="uid://dxpjihu0jl61k" path="res://scenes/UI/JoinGame.tscn" id="8_dpnug"]
[ext_resource type="PackedScene" uid="uid://c7t0t4lbjup7v" path="res://scenes/GameUI.tscn" id="9_6h3q2"]
[ext_resource type="PackedScene" uid="uid://7hykyeloohuo" path="res://scenes/UI/TEI.tscn" id="9_fqwg7"]
[ext_resource type="PackedScene" uid="uid://dmsu7yb0okn3i" path="res://scenes/UI/NewScratch.tscn" id="10_fcyw3"]
[ext_resource type="PackedScene" uid="uid://bc07ynx8oxnsa" path="res://scenes/UI/WatchList.tscn" id="11_evw8m"]
[ext_resource type="PackedScene" uid="uid://cc4qhu7nmhb1t" path="res://scenes/UI/OldGames.tscn" id="12_tith6"]
[ext_resource type="Script" uid="uid://bpqerb6tvv64l" path="res://src/UI/ExtendableTab.gd" id="19_s1ous"]
[ext_resource type="Script" uid="uid://m8qeo2f26xe5" path="res://src/UI/URLButton.gd" id="20_fuxcv"]

[node name="VTabContainer" type="Container" node_paths=PackedStringArray("start")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_co0ct")
start = NodePath("Login")
th = ExtResource("2_3pers")

[node name="Login" parent="." node_paths=PackedStringArray("tabOnLogin", "button") instance=ExtResource("3_to38n")]
layout_mode = 2
tabOnLogin = NodePath("../Board")
button = NodePath("../tabBar/Home/SubTabs/Profile")

[node name="Settings" parent="." node_paths=PackedStringArray("Board") instance=ExtResource("4_5u3vk")]
layout_mode = 2
Board = NodePath("../Board")

[node name="Board" type="Container" parent="."]
layout_mode = 2
script = ExtResource("8_c5sep")
board3D = ExtResource("4_l2ddi")
board2D = ExtResource("5_b70kj")

[node name="Board" type="SubViewportContainer" parent="Board"]
layout_mode = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="Board/Board"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(2, 2)
render_target_update_mode = 4

[node name="GameUI" parent="Board" instance=ExtResource("9_6h3q2")]
layout_mode = 2

[node name="New" parent="." instance=ExtResource("7_8semy")]
layout_mode = 2

[node name="Join" parent="." node_paths=PackedStringArray("button") instance=ExtResource("8_dpnug")]
layout_mode = 2
button = NodePath("../tabBar/Play/SubTabs/Join")

[node name="TEI" parent="." instance=ExtResource("9_fqwg7")]
layout_mode = 2

[node name="Scratch" parent="." instance=ExtResource("10_fcyw3")]
layout_mode = 2

[node name="Watch" parent="." node_paths=PackedStringArray("button") instance=ExtResource("11_evw8m")]
layout_mode = 2
button = NodePath("../tabBar/Watch/SubTabs/Current")

[node name="OldGames" parent="." instance=ExtResource("12_tith6")]
layout_mode = 2

[node name="tabBar" type="BoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="Home" type="Button" parent="tabBar"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"TabButton"
text = " Home "
script = ExtResource("19_s1ous")

[node name="SubTabs" type="BoxContainer" parent="tabBar/Home"]
visible = false
layout_mode = 0
offset_right = 272.0
offset_bottom = 96.0
theme_override_constants/separation = 0
vertical = true

[node name="Profile" type="Button" parent="tabBar/Home/SubTabs"]
layout_mode = 2
mouse_filter = 1
theme_type_variation = &"TabButton"
text = "Login"

[node name="Settings" type="Button" parent="tabBar/Home/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "Settings"

[node name="Discord" type="Button" parent="tabBar/Home/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "Discord"
script = ExtResource("20_fuxcv")
URL = "https://discord.gg/2xEt42X"

[node name="USTA" type="Button" parent="tabBar/Home/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "USTA"
script = ExtResource("20_fuxcv")
URL = "https://ustak.org/"

[node name="Board" type="Button" parent="tabBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TabButton"
text = " Board "

[node name="Play" type="Button" parent="tabBar"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = " Play "
script = ExtResource("19_s1ous")

[node name="SubTabs" type="VBoxContainer" parent="tabBar/Play"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="New" type="Button" parent="tabBar/Play/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "New Game
"

[node name="Join" type="Button" parent="tabBar/Play/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "Join (0)"

[node name="TEI" type="Button" parent="tabBar/Play/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "TEI"

[node name="Scratch" type="Button" parent="tabBar/Play/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "Scratch"

[node name="Watch" type="Button" parent="tabBar"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = " Watch "
script = ExtResource("19_s1ous")

[node name="SubTabs" type="VBoxContainer" parent="tabBar/Watch"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="Current" type="Button" parent="tabBar/Watch/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = " Ongoing (0) "

[node name="Past" type="Button" parent="tabBar/Watch/SubTabs"]
layout_mode = 2
theme_type_variation = &"TabButton"
text = "Old Games"
